# wlr-utils

./: CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  dist-workspace.toml
.github/workflows/: ci.yml  deb.yml  publish.yml
crates/wlr-capture/: Cargo.toml  README.md  build.rs
crates/wlr-capture/i18n/de/: wlr_capture.ftl
crates/wlr-capture/i18n/en/: wlr_capture.ftl
crates/wlr-capture/i18n/es/: wlr_capture.ftl
crates/wlr-capture/i18n/fr/: wlr_capture.ftl
crates/wlr-capture/i18n/it/: wlr_capture.ftl
crates/wlr-capture/i18n/ja/: wlr_capture.ftl
crates/wlr-capture/i18n/ko/: wlr_capture.ftl
crates/wlr-capture/i18n/nl/: wlr_capture.ftl
crates/wlr-capture/i18n/pl/: wlr_capture.ftl
crates/wlr-capture/i18n/pt-BR/: wlr_capture.ftl
crates/wlr-capture/i18n/ru/: wlr_capture.ftl
crates/wlr-capture/i18n/uk/: wlr_capture.ftl
crates/wlr-capture/i18n/zh-CN/: wlr_capture.ftl
crates/wlr-capture/src/: audio.rs  capture.rs  clipboard.rs  focus.rs  gl.rs  i18n.rs  icons.rs  lib.rs  mirror.rs  overlay.rs  render.rs  sink.rs  theme.rs  video.rs  wl.rs
crates/wlr-chooser/: Cargo.toml  README.md
crates/wlr-chooser/src/: lib.rs  shell.rs  ui.rs
crates/wlr-draw/: Cargo.toml  README.md
crates/wlr-draw/contrib/: wlr-draw.service
crates/wlr-draw/src/: ipc.rs  main.rs  model.rs  overlay.rs  proto.rs  tray.rs
crates/wlr-peek/: Cargo.toml  README.md
crates/wlr-peek/src/: main.rs
crates/wlr-pip/: Cargo.toml  README.md
crates/wlr-pip/src/: main.rs
crates/wlr-shot/: Cargo.toml  README.md
crates/wlr-shot/src/: main.rs
docs/: _config.yml  index.md
