[workspace]
members = [
    "crates/wlr-capture",
    "crates/wlr-chooser",
    "crates/wlr-peek",
    "crates/wlr-pip",
    "crates/wlr-shot",
]
resolver = "3"

# Shared package metadata for every crate in the wlr-utils workspace.
[workspace.package]
version = "1.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Stéphane Jourdois <stephane@jourdois.fr>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sjourdois/wlr-utils"
homepage = "https://github.com/sjourdois/wlr-utils"

# Centralised dependency versions; crates opt in with `dep.workspace = true`.
[workspace.dependencies]
anyhow = "1"
egui = "0.32"
# Low-level Wayland client for toplevel capture (ext-image-copy-capture).
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["staging", "client"] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
rustix = { version = "1.1.4", features = ["fs", "mm", "event", "process"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"] }
rust-embed = "8.11.0"
unic-langid = "0.9.6"
resvg = { version = "0.45.1", default-features = false }
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
smithay-client-toolkit = "0.20.0"
wayland-egl = "0.32.11"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
glow = "0.16" # pinned: must match the glow version egui_glow 0.32 uses
egui_glow = "0.32.3"
libloading = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
fontdb = { version = "0.23.0", default-features = false, features = ["fontconfig"] }
gbm = { version = "0.18.0", default-features = false }
# Native FFmpeg bindings for hardware/software video encoding (the `video` feature).
# Tracks the FFmpeg major; 8.x builds against the system libav* 8.x (-dev packages).
ffmpeg-next = "8.1"
# SIGINT handler so `wlr-shot record` finalises the file cleanly on Ctrl-C.
ctrlc = "3.5"

[profile.release]
opt-level = 2
lto = "thin"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
