[package]
name = "wlr-pip"
description = "(deprecated) merged into wlr-peek — use 'wlr-peek mirror'"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["wayland", "wlroots", "deprecated", "picture-in-picture", "mirror"]
categories = ["command-line-utilities"]

# Deprecated: the live mirror is now `wlr-peek mirror`. This crate is a tiny pointer
# kept only because the name is published; it has no dependencies and no real logic.
[[bin]]
name = "wlr-pip"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Stéphane Jourdois <stephane@jourdois.fr>"
section = "utils"
priority = "optional"
license-file = ["../../LICENSE-MIT", "0"]
recommends = "wlr-peek"
extended-description = """\
Deprecated. The floating live mirror (picture-in-picture) is now part of wlr-peek: \
use `wlr-peek mirror <ID>` for a window, or `wlr-peek mirror -g \"X,Y WxH\"` for a \
live region magnifier."""
assets = [
    ["../../target/release/wlr-pip", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/wlr-pip/README.md", "644"],
]
